crates/did-core/src/document/snapshots/vercre_didcore__document__patch__tests__patch_remove_service.snap
---
source: did-core/src/document/patch.rs
assertion_line: 760
expression: doc
---
id: "did:ion:EiAscM5K0lfATv8GEqlR_RAVId0alzdcOgIRs-fBLXBWFA"
"@context": "https://www.w3.org/ns/did/v1"
controller: "did:ion:EiAscM5K0lfATv8GEqlR_RAVId0alzdcOgIRs-fBLXBWFA"
verificationMethod:
  - id: 371544b48d7d60d430c9c8b4af3745fa
    type: EcdsaSecp256k1VerificationKey2019
    controller: "did:ion:EiAscM5K0lfATv8GEqlR_RAVId0alzdcOgIRs-fBLXBWFA"
    publicKeyJwk:
      kty: EC
      crv: secp256k1
      x: smmFWI4qLfWztIzwurLCvjjw7guNZvN99ai2oTXGUtc
      y: rxp_kiiXHitxLHe545cePsF0y_Mdv_dy6zY4ov_0q9g
authentication:
  - 371544b48d7d60d430c9c8b4af3745fa
assertionMethod:
  - 371544b48d7d60d430c9c8b4af3745fa
service:
  - id: service2
    type: service2type
    serviceEndpoint: "https://service2.example.com/"

